# house-hunting

./: .gitignore  README.md  app.R
R/funs/: pareto_frontier.R
R/markdown/: report.qmd
R/scripts/: analysis.R
data/redfin/: formatted-results.xlsx  redfin-results.xlsx
python/: README.md  lake_house_finder.py  pyproject.toml
