[project]
name = "lake-house-finder"
version = "0.1.0"
description = "Find for-sale homes near lakes and rank them by value."
requires-python = ">=3.11"
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "pandas>=2.1",
    "requests>=2.31",
    "geopy>=2.4",
    "homeharvest>=0.4",
    "tabulate>=0.9",
]

[project.scripts]
lake-house-finder = "lake_house_finder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["lake_house_finder.py"]

[tool.hatch.build.targets.wheel.sources]
"lake_house_finder.py" = "lake_house_finder.py"
